# cd0157-Server-Deployment-and-Containerization

./: .dockerignore  .gitignore  Dockerfile  aws-auth-patch.yml  main.py  pyproject.toml
cloud/: buildspec.yml  ci-cd-codepipeline.cfn.yml  deployment.yml  service.yml  trust.json
scripts/: run.sh
