[project]
name = "cd0157-server-deployment-and-containerization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "werkzeug>=3.1.6",
]
